# webhook-service

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: config.rs  database.rs  error.rs  handlers.rs  main.rs  models.rs  script.js  services.rs  style.css  web_interface.html
